--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Username
+name: Sanket Singh
 
 # Short bio or description (displayed in the header)
-description: Programmer From Somewhere On Earth
-
+description: A software engineer in the making.
 
 #
 # Flags below are optional
@@ -16,19 +15,18 @@ description: Programmer From Somewhere On Earth
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: agarwal.akshay.akshay8@gmail.com
-  facebook:
+  email: sanketsingh2mail@gmail.com
+  facebook: sanket.kumarsingh.3
   flickr:
-  github: AkshayAgarwal007
+  github: sanketkumarsinghiitkgp
   instagram:
-  linkedin: akshay-agarwal-782018a4
+  linkedin: sanket-singh-312b37151
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/3807565/akshay"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
-
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -39,7 +37,7 @@ google_analytics:
 
 # Your website URL (e.g. http://akshayagarwal007.github.io)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://sanketkumarsinghiitkgp.github.io/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -61,14 +59,14 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
+    css_class: "highlight"
 
 # Set the Sass partials directory, as we're using @imports
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
