--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ google_analytics:
 
 # Your website URL (e.g. http://akshayagarwal007.github.io)
 # Used for Sitemap.xml and your RSS feed
-url: https://sanketkumarsinghiitkgp.github.io/
+url: sanketkumarsinghiitkgp.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
